# oy-cli

./: .gitignore  CONTRIBUTING.md  ISSUES.md  README.md  mise.toml  oy_cli.py  pyproject.toml
.github/workflows/: release.yml
tests/: test_tool_args.py
